--- a/Backend/package.json
+++ b/Backend/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "connect-flash": "^0.1.1",
     "express": "^4.19.2",
@@ -8,6 +9,8 @@
     "express-session": "^1.18.0",
     "handlebars": "^4.7.8",
     "mongoose": "^8.3.4",
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0",
     "path": "^0.12.7"
   }
 }
